--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "movie-trailer": "^2.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-player": "^2.10.0",
     "react-scripts": "5.0.1",
     "react-youtube": "^8.3.0",
     "web-vitals": "^2.1.4"
